// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`launchd render > system plist targets LaunchDaemons and /var/log 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>Label</key>
	<string>ai.sepia</string>
	<key>ProgramArguments</key>
	<array>
		<string>/usr/local/bin/sepia</string>
		<string>serve</string>
		<string>--no-ui</string>
	</array>
	<key>RunAtLoad</key>
	<true/>
	<key>KeepAlive</key>
	<dict>
		<key>SuccessfulExit</key>
		<false/>
	</dict>
	<key>StandardOutPath</key>
	<string>/var/log/sepia.log</string>
	<key>StandardErrorPath</key>
	<string>/var/log/sepia.log</string>
</dict>
</plist>
"
`;

exports[`launchd render > user plist has LaunchAgent path and no env block without an env file 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>Label</key>
	<string>ai.sepia</string>
	<key>ProgramArguments</key>
	<array>
		<string>/usr/local/bin/sepia</string>
		<string>serve</string>
	</array>
	<key>RunAtLoad</key>
	<true/>
	<key>KeepAlive</key>
	<dict>
		<key>SuccessfulExit</key>
		<false/>
	</dict>
	<key>StandardOutPath</key>
	<string>~/Library/Logs/sepia.log</string>
	<key>StandardErrorPath</key>
	<string>~/Library/Logs/sepia.log</string>
</dict>
</plist>
"
`;

exports[`launchd render > user plist renders KEY=value lines, ignoring comments and blanks 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>Label</key>
	<string>ai.sepia</string>
	<key>ProgramArguments</key>
	<array>
		<string>/usr/local/bin/sepia</string>
		<string>serve</string>
	</array>
	<key>EnvironmentVariables</key>
	<dict>
		<key>SEPIA_TOKEN</key>
		<string>t0ken&amp;&lt;x&gt;</string>
		<key>SEPIA_HOST</key>
		<string>127.0.0.1</string>
		<key>DUP</key>
		<string>last</string>
	</dict>
	<key>RunAtLoad</key>
	<true/>
	<key>KeepAlive</key>
	<dict>
		<key>SuccessfulExit</key>
		<false/>
	</dict>
	<key>StandardOutPath</key>
	<string>~/Library/Logs/sepia.log</string>
	<key>StandardErrorPath</key>
	<string>~/Library/Logs/sepia.log</string>
</dict>
</plist>
"
`;
